<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spotifai</string>
    <string name="menu">Menu</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="back">Menu</string>
    <string name="audio_image">Imagen de audio</string>
    <string name="reproduciendo">Reproduciendo: </string>
    <string name="reproducir">Reproducir</string>
    <string name="pausar">Pausar</string>
    <string name="detener">Detener</string>
    <string name="btn_back">Volver</string>
    <string name="btn_previous">Anterior</string>
    <string name="btn_next">Siguiente</string>
    <string name="title_gallery">Lista</string>
    <string name="image_desc">Descripción de la imagen</string>

</resources>
